--- a/style.css
+++ b/style.css
@@ -134,14 +134,32 @@ input[type="text"] {
   margin: 0 5px 5px 0;
 }
 
-@media only screen and (max-width: 500px) {
-  input[type="text"] {
-    width: 100%;
+@media only screen and (max-width: 800px) {
+  .meals {
+    grid-template-columns: repeat(3, 1fr);
   }
 }
 
 @media only screen and (max-width: 700px) {
+  .meals {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .meal {
+    height: 200px;
+    width: 200px;
+  }
 }
 
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 500px) {
+  input[type="text"] {
+    width: 100%;
+  }
+  .meals {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .meal {
+    height: 300px;
+    width: 300px;
+  }
 }
